src/main/java/org/example/eventplanner/error/ErrorCodes.java
package org.example.eventplanner.error;

public class ErrorCodes {
    public static final String GUEST_EMAIL_ALREADY_EXISTS = "409";
    public static final String EVENT_SCHEDULED_DATE_ALREADY_EXISTS = "409";
    public static final String INVALID_EVENT_SCHEDULED_TIME = "422";
    public static final String ENTITY_NOT_FOUND = "404";
    public static final String ENTITY_ALREADY_EXISTS = "409";
    public static final String NO_DATA = "200";
}
